# AsciDiagramsCorrector

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: frontend-effort-estimator.md  python-effort-estimator.md
.githooks/: post-commit
docs/: ARCHITECTURE.md  DEVELOPMENT_EFFORT_REPORT.md  FEATURES.md
scripts/: obfuscate.sh  publish_obfuscated.sh
src/ascii_corrector/: __init__.py  __main__.py  exceptions.py
src/ascii_corrector/cli/: app.py
src/ascii_corrector/cli/commands/: __init__.py  analyze.py  correct.py  fix_md.py
src/ascii_corrector/config/: __init__.py  settings.py
src/ascii_corrector/correction/: __init__.py  alignment_calculator.py  box_alignment_calculator.py  correction_engine.py  protocols.py  row_shift_corrector.py  shift_corrector.py  stray_character_finder.py
src/ascii_corrector/detection/: __init__.py  box_detector.py  line_detector.py  parallel_line_finder.py  protocols.py  structure_classifier.py
src/ascii_corrector/domain/: __init__.py  cell.py  character.py  character_constants.py  enums.py  grid.py  line.py  position.py
src/ascii_corrector/io/: __init__.py  backup_manager.py  diagram_classifier.py  markdown_corrector.py  markdown_parser.py
src/ascii_corrector/logging/: __init__.py  setup.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  test_box_and_tree_integration.py  test_cli_analyze.py  test_cli_correct.py  test_cli_fix_md.py
tests/fixtures/: __init__.py
tests/fixtures/diagrams/: api_gateway_pattern.txt  authentication_flow.txt  cache_layers.txt  cicd_pipeline.txt  complex_diagram.txt  container_orchestration.txt  data_pipeline.txt  database_replication.txt  distributed_system.txt  event_driven_architecture.txt  flowchart.txt  graph_database.txt  kafka_cluster.txt  load_balancer_servers.txt  message_queue_system.txt  microservices_architecture.txt  multi_tier_application.txt  nested_boxes.txt  network_topology.txt  parallel_horizontal.txt  parallel_vertical.txt  pub_sub_system.txt  serverless_architecture.txt  service_mesh.txt  shifted_flowchart.txt  shifted_lines.txt  state_machine.txt  system_integration.txt
tests/fixtures/diagrams/edge_cases/: large_box_tall.txt  tree_simple.txt  unicode_simple_box.txt
tests/fixtures/markdown/: broken_diagram.md  e2e_architecture.md  mixed_blocks.md  multiple_diagrams.md  no_diagrams.md  simple_diagram.md
tests/integration/: test_correction_pipeline.py  test_markdown_pipeline.py
tests/unit/correction/: __init__.py  test_alignment_calculator.py  test_box_alignment_calculator.py  test_correction_engine.py  test_row_shift_corrector.py  test_shift_corrector.py  test_stray_character_finder.py
tests/unit/detection/: __init__.py  test_box_detector.py  test_diagonal_detection.py  test_line_detector.py  test_parallel_line_finder.py  test_structure_classifier.py
tests/unit/domain/: test_cell.py  test_character.py  test_enums.py  test_grid.py  test_line.py  test_position.py
tests/unit/io/: __init__.py  test_backup_manager.py  test_diagram_classifier.py  test_markdown_corrector.py  test_markdown_parser.py
